[package]
name = "Simple-MicroBridge-Server"
version = "0.1.3"
edition = "2024"

[dependencies]
btleplug = "0.11.8"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
tokio = { version = "1.50.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4"] }
