[package]
name = "microbridge"
version = "0.1.10"
edition = "2024"

[dependencies]
btleplug = "0.11.8"
clap = { version = "4.5.60", features = ["derive"] }
futures = "0.3.32"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = "1.21.0"
